--- a/frontend/public/parts.html
+++ b/frontend/public/parts.html
@@ -34,7 +34,7 @@
     <div id="root">
 
   </div>
-  <script src="javascript.js"></script>
+  <script src="parts.js"></script>
     
     <!--
       This HTML file is a template.
