--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="stylesheet" href="App.css" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,14 +27,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="db.js"></script>
-    <title>Not React App</title>
+  
+    <title>Starship Generator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <a href="parts.html">Custom Parts</a>
     <div id="root">
 
   </div>
-  <script src="javascript.js"></script>
+  <script src="index.js"></script>
     
     <!--
       This HTML file is a template.
