Added in user functionality, finished PCU counter and warnings.

--- a/frontend/public/parts.html
+++ b/frontend/public/parts.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <a href="index.html">Starship Generator</a>
+    <a href="site.html">Starship Generator</a>
     <div id="root">
 
   </div>
