--- a/frontend/public/site.html
+++ b/frontend/public/site.html
@@ -32,11 +32,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <a href="site.html">Build Ship</a>
+    <a href="parts.html">Custom Parts</a>
     <div id="root">
 
   </div>
-  <script src="users.js"></script>
+  <script src="index.js"></script>
     
     <!--
       This HTML file is a template.
